# Chess-TUI

./: Cargo.toml  README.md
src/: app.rs  config.rs  events.rs  main.rs  states.rs
src/ai/: mod.rs
src/engine/: board.rs  fen.rs  game.rs  mod.rs  moves.rs
src/network/: mod.rs
src/storage/: history.rs
src/ui/: board_renderer.rs  layout.rs  mod.rs  mouse.rs  theme.rs  widgets.rs
src/utils/: time.rs
