[package]
name = "chess-tui"
version = "0.1.0"
edition = "2021"
description = "A modern chess TUI application"

[dependencies]
ratatui = "0.26"           # TUI framework
crossterm = "0.27"         # Terminal manipulation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"             # Error handling
thiserror = "1.0"
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
networking = ["tokio"]
